test/e2e/filters/custom_err_response/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: custom-err-response
                      library_path: "/filter.so"
                      plugin_name: custom_err_response
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - name: 401-route
                          match:
                            prefix: "/401"
                          direct_response:
                            status: 401
                            body:
                              inline_string: "Unauthorized"
                        - name: 429-route
                          match:
                            prefix: "/429"
                          direct_response:
                            status: 429
                            body:
                              inline_string: "TOO_MANY_REQUESTS"
                        - name: 503-route
                          match:
                            prefix: "/503"
                          direct_response:
                            status: 503
                            body:
                              inline_string: '{"status":503,"message":"Service Unavailable"}'
                          response_headers_to_add:
                            - header:
                                key: "content-type"
                                value: "application/json"
